# street-food-customer-api

./: .gitignore  README.md  pyproject.toml
domain/order/: base.py  order.py  order_line.py
domain/tests/tests_order/: conftest.py  test_get_order.py  test_order_set.py
domain/tests/tests_users/: test_permissions.py
domain/users/: __init__.py  permissions.py
domein/order/: __init__.py  base.py  order.py  order_line.py  payment.py  user_data.py
domein/tests/tests_order/: conftest.py  test_get_order.py
src/: manage.py  pytest.ini
src/api/customer/: urls_cart.py  urls_new_order.py
src/app_cart/: models.py  repository.py  views.py
src/app_contact/: repository.py  serializers.py
src/app_menu/: admin.py  models.py  serializer.py
src/app_order/: models.py  repository.py  serializers.py  views.py
src/app_payment_callbacks/: models.py  repositories.py  serializers.py  urls.py  utils.py  views.py
src/dj/: __init__.py  repository.py  serializers.py  settings.py  urls.py  utils.py
src/dj/app_cart/: repository.py  serializers.py  views.py
src/dj/app_contact/: models.py  repository.py
src/dj/app_contacts/: models.py
src/dj/app_menu/: apps.py  models.py  repository.py  serializer.py
src/dj/app_order/: apps.py  models.py  repository.py  serializer.py  serializers.py  services.py
src/dj/app_payment_callbacks/: apps.py  models.py  serializers.py  utils.py
src/dj/dj/: settings.py
src/dj/tests/: test_serializers.py  (+1 more)
src/domain/: __init__.py  domain_setup.py  items.py  permissions.py  users.py
src/src/: repository.py  settings.py  urls.py  utils.py
(+62 files in other folders)
